@@ -2,6 +2,7 @@ var ss = require("sdk/simple-storage"),
 	{ ToggleButton } = require('sdk/ui/button/toggle'),
 	panels = require('sdk/panel'),
 	self = require('sdk/self'),
+	tabs = require('sdk/tabs'),
 	cm = require('sdk/context-menu');
 	const {Cu} = require('chrome');
 
@@ -130,14 +131,14 @@ function storeOnJSON(selectedTitle, selectedText, currentURL) {
 			promise.then(
 			function onSuccess(myfile) {
 				if(aExists) {
-					console.log('yayyy');
+					//console.log('yayyy');
 					myfile.setPosition(-2, OS.File.POS_END);
 					allTextJSON = ',' + allTextJSON + ']}';
 					var	array = encoder.encode(allTextJSON);
 					myfile.write(array);
 					myfile.close();	
 				} else {
-					console.log('booo');
+					//console.log('booo');
 					allTextJSON = '{"allData":[' + allTextJSON + ']}';
 					var	array = encoder.encode(allTextJSON);
 					myfile.write(array);
@@ -179,7 +180,7 @@ function publishContentOnLoad() {
 								var listData = ' ';
 								var data;
 								for(data in readJSON.allData)
-									listData = listData +  '<LI><A href=#'+ ((readJSON.allData.length - 1) - data) + '>' + readJSON.allData[(readJSON.allData.length - 1) - data].title + '</A></LI>';
+									listData = listData +  '<LI><A id="'+ ((readJSON.allData.length - 1) - data) + '" href=#'+ ((readJSON.allData.length - 1) - data) + '>' + readJSON.allData[(readJSON.allData.length - 1) - data].title + '</A></LI>';
 
 								myPanelfile.write(encoder.encode(listData));
 								myPanelfile.write(encoder.encode('</UL></body></html>'));
@@ -197,6 +198,7 @@ function publishContentOnLoad() {
 
 
 
+//Opening a popup for reading the saved text 
 var popupPanel = panels.Panel({
 	contentURL : self.data.url('PopupPanel.html'),
 	contentScriptFile : self.data.url('DisplayDataInPopup.js')
@@ -206,4 +208,19 @@ panel.port.on('click-link', function(JSONIndex) {
 	JSONIndex = Number(JSONIndex.slice(-2));
 	popupPanel.port.emit('data-avail', allJSONGlobal.allData[JSONIndex]);
 	popupPanel.show();
+});
+
+
+
+
+
+
+
+
+//Opening a new tab for continue reading
+popupPanel.port.on('content-link', function(docURL) {
+	tabs.open(docURL);
+	tabs.on('ready', function(tab) {
+		//console.log('hello hello');
+	});
 });
