@@ -7,9 +7,16 @@ Date: 12/22/2014
 => Made PushData.js to push node in chronological order
 => Converting the data to JSON and writing it to a file
 
+
 Date: 12/23/2014
 ==================================================================
 
 => Fixed OS.File.exists() issue
 => Added reading saved json from file and loading it into panel at load
 => Displayed the first loaded content on panel on chronological order
+
+
+Date: 12/24/2014
+===================================================================
+
+=> added continue reading opeaning on tabs.
